--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -10,3 +10,17 @@
 .btn:hover {
   background-color: #EEE;
 }
+
+.u-border {
+  border: 1px solid black;
+}
+
+.u-flex {
+  display: flex;
+}
+
+.u-flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
